--- a/src/index.css
+++ b/src/index.css
@@ -66,10 +66,18 @@ body {
 }
 
 .darkblue {
-  width: 26%;
-  height: 75%;
   background-color: #7CC0FF;
   border: 10px solid #4D9FFF;
+}
+
+.lightblue {
+  background-color: #99ECF8;
+  border: 10px solid #4D9FFF;
+}
+
+.appliance-button {
+  width: 26%;
+  height: 75%;
   border-radius: 50px;
   text-align: center;
   margin-left: 20px;
@@ -77,14 +85,49 @@ body {
   margin-top: 15px;
 }
 
-.lightblue {
-  width: 26%;
-  height: 75%;
-  background-color: #99ECF8;
-  border: 10px solid #4D9FFF;
+.appliance-info {
+  width: 75%;
+  height: 60%;
   border-radius: 50px;
   text-align: center;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-top: 15px;
+  margin: 0 auto;
+  margin-top: 5%;
+  display: flex;
+}
+
+.appliance-image {
+  height: 100%;
+  width: 35%;
+}
+
+.appliance-image img {
+  height: 80%;
+  margin-top: 10%;
+  margin-left: 10%;
+}
+
+.appliance-info-text {
+  height: 100%;
+  width: 70%;
+}
+
+.appliance-info-text h2{
+  margin-top: 10%;
+}
+
+#back-arrow {
+  position: fixed;
+  height: 100px;
+  top: 50%;
+}
+
+#selection-button {
+  height: 90px;
+  width: 300px;
+  background-color: black;
+  color: white;
+  border: 10px solid #4D9FFF;
+  border-radius: 15px;
+  font-size: 40px;
+
 }
