--- a/src/index.css
+++ b/src/index.css
@@ -216,3 +216,23 @@ body {
   margin-top: -17vw;
   margin-left: 8vw;
 }
+
+/* Timer Selection Screen */
+
+.timer_selection{
+  margin: 0 auto;
+  height: 60%;
+  width: 80%;
+}
+
+.timer_option {
+  width: 100%;
+  height: 20%;
+  margin-top: 25px;
+  margin-bottom: 5px;
+  border-radius: 30px;
+}
+
+.timer_selection h1 {
+  font-weight: 600;
+}
