--- a/src/index.css
+++ b/src/index.css
@@ -1,354 +1,349 @@
 /* Base Styling  */
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-    Arial, sans-serif;
-  background: linear-gradient(180deg, #99ECF8 0%, #4D9FFF 100%);
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    background: linear-gradient(180deg, #99ecf8 0%, #4d9fff 100%);
 }
 
 .outer-container {
-  width: 100vw;
-  height: 100vh;
+    width: 100vw;
+    height: 100vh;
 }
 
 .content-container {
-  position: relative;
-  width: 90vw;
-  height: 90vh;
-  margin: 2.5% auto;
-  background: #FFFFFF;
-  border: 5px solid #F3F3F3;
-  border-radius: 50px;
+    position: relative;
+    width: 90vw;
+    height: 90vh;
+    margin: 2.5% auto;
+    background: #ffffff;
+    border: 5px solid #f3f3f3;
+    border-radius: 50px;
 }
 
 .text-container {
-  margin-top: 10px;
+    margin-top: 10px;
 }
 
 .text-container h1 {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 5vh;
-  text-align: center;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 5vh;
+    text-align: center;
 }
 
 .text-container h2 {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 3.5vh;
-  text-align: center;
-  margin-top: -5px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 3.5vh;
+    text-align: center;
+    margin-top: -5px;
 }
 
 #back-arrow {
-  position: fixed;
-  height: 100px;
-  top: 50%;
+    position: fixed;
+    height: 100px;
+    top: 50%;
 }
 
 #home-button {
-  position: fixed;
-  height: 65px;
-  width: 120px;
-  top: 85%;
-  margin-left: 25px;
-  background-color: #D4EBFF;
-  border: 5px solid #4D9FFF;
-  border-radius: 20px;
-  color: #0075FF;
-  font-size: 18px;
-  font-weight: 600;
+    position: fixed;
+    height: 65px;
+    width: 120px;
+    top: 85%;
+    margin-left: 25px;
+    background-color: #d4ebff;
+    border: 5px solid #4d9fff;
+    border-radius: 20px;
+    color: #0075ff;
+    font-size: 18px;
+    font-weight: 600;
 }
 
 .darkblue {
-  background-color: #7CC0FF;
-  border: 10px solid #4D9FFF;
+    background-color: #7cc0ff;
+    border: 10px solid #4d9fff;
 }
 
 .lightblue {
-  background-color: #99ECF8;
-  border: 10px solid #4D9FFF;
+    background-color: #99ecf8;
+    border: 10px solid #4d9fff;
 }
-
 
 /* Appliance Selection Screen */
 
 .selection p {
-  font-size: 19px;
-  font-weight: 500;
+    font-size: 19px;
+    font-weight: 500;
 }
 
-.selection img{
-  height: 70%;
+.selection img {
+    height: 70%;
 }
 
 .top-row {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  width: 90vw;
-  height: 35vh;
-  margin-top: 1vh;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    width: 90vw;
+    height: 35vh;
+    margin-top: 1vh;
 }
 
 .bottom-row {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  width: 90vw;
-  height: 35vh;
-  margin-top: 36vh;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    width: 90vw;
+    height: 35vh;
+    margin-top: 36vh;
 }
 
 .appliance-button {
-  width: 26%;
-  height: 75%;
-  border-radius: 50px;
-  text-align: center;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-top: 15px;
+    width: 26%;
+    height: 75%;
+    border-radius: 50px;
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 15px;
 }
-
 
 /* Appliance Information Screen  */
 
 .appliance-info {
-  width: 75%;
-  height: 60%;
-  border-radius: 50px;
-  text-align: center;
-  margin: 0 auto;
-  margin-top: 5%;
-  display: flex;
+    width: 75%;
+    height: 60%;
+    border-radius: 50px;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 5%;
+    display: flex;
 }
 
 .appliance-image {
-  height: 100%;
-  width: 35%;
+    height: 100%;
+    width: 35%;
 }
 
 .appliance-image img {
-  height: 80%;
-  margin-top: 10%;
-  margin-left: 22.5%;
+    height: 80%;
+    margin-top: 10%;
+    margin-left: 22.5%;
 }
 
 #laptop-img {
-  height: 70%;
-  margin-top: 15%;
-  margin-left: 10%;
+    height: 70%;
+    margin-top: 15%;
+    margin-left: 10%;
 }
 
 #toaster-img {
-  height: 55%;
-  margin-top: 22.5%;
+    height: 55%;
+    margin-top: 22.5%;
 }
 
 .appliance-info-text {
-  height: 100%;
-  width: 70%;
+    height: 100%;
+    width: 70%;
 }
 
-.appliance-info-text h2{
-  margin-top: 10%;
+.appliance-info-text h2 {
+    margin-top: 10%;
 }
 
 #selection-button {
-  height: 90px;
-  width: 300px;
-  background-color: black;
-  color: white;
-  border: 10px solid #4D9FFF;
-  border-radius: 15px;
-  font-size: 40px;
+    height: 90px;
+    width: 300px;
+    background-color: black;
+    color: white;
+    border: 10px solid #4d9fff;
+    border-radius: 15px;
+    font-size: 40px;
 }
-
 
 /* Mode Selection Screen */
 
 .mode-selection {
-  height: 70%;
-  width: 75vw;
-  display: flex;
-  margin: 0 auto;
-  justify-content: center;
-} 
+    height: 70%;
+    width: 75vw;
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+}
 
 .mode {
-  height: 33vw;
-  width: 40vw;
-  margin: 2.5vw 1.5vw;
-  border-radius: 50px;
-  text-align: center;
+    height: 33vw;
+    width: 40vw;
+    margin: 2.5vw 1.5vw;
+    border-radius: 50px;
+    text-align: center;
 }
 
 .mode p {
-  font-size: 20px;
+    font-size: 20px;
 }
 
 #solo-mode p {
-  margin-top: 3vw;
+    margin-top: 3vw;
 }
 
 .mode img {
-  height: 20vw;
-  width: 20vw;
+    height: 20vw;
+    width: 20vw;
 }
 
 .duo-mode-imgs {
-  justify-content: center;
+    justify-content: center;
 }
 
 .duo-mode-imgs img {
-  position: relative;
+    position: relative;
 }
 
 #duo-mode-img-left {
-  height: 19vw;
-  width: 19vw;
-  z-index: 1;
-  margin-left: -8vw;
+    height: 19vw;
+    width: 19vw;
+    z-index: 1;
+    margin-left: -8vw;
 }
 
 #duo-mode-img-right {
-  z-index: 2;
-  margin-top: -17vw;
-  margin-left: 8vw;
+    z-index: 2;
+    margin-top: -17vw;
+    margin-left: 8vw;
 }
 
 /* Timer Selection Screen */
 
-.timer_selection{
-  margin: 0 auto;
-  height: 60%;
-  width: 80%;
+.timer_selection {
+    margin: 0 auto;
+    height: 60%;
+    width: 80%;
 }
 
 .timer_option {
-  width: 100%;
-  height: 20%;
-  margin-top: 25px;
-  margin-bottom: 5px;
-  border-radius: 30px;
+    width: 100%;
+    height: 20%;
+    margin-top: 25px;
+    margin-bottom: 5px;
+    border-radius: 30px;
 }
 
 .timer_selection h1 {
-  font-weight: 600;
+    font-weight: 600;
 }
-
 
 /* Start + Challenge Screen */
 
 .challenge-screen {
-  width: 75%;
-  height: 60%;
-  border-radius: 50px;
-  text-align: center;
-  margin: 0 auto;
-  margin-top: 5%;
-  display: flex;
+    width: 75%;
+    height: 60%;
+    border-radius: 50px;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 5%;
+    display: flex;
 }
 
 .left {
-  height: 100%;
-  width: 33%;
-  justify-content: left;
+    height: 100%;
+    width: 33%;
+    justify-content: left;
 }
 
 .left img {
-  height: 65%;
+    height: 65%;
 }
 
 #appliance-name {
-  margin-top: 5vh;
+    margin-top: 5vh;
 }
 
 #appliance-wattage {
-  margin-top: -1.5vh;
-  font-size: 16px;
+    margin-top: -1.5vh;
+    font-size: 16px;
 }
 
-.middle {
-  height: 100%;
-  width: 33%;
+#middle {
+    height: 100%;
+    width: 33%;
 }
 
 #button {
-  position: relative;
-  height: 120px;
-  width: 80%;
-  background-color: black;
-  color: white;
-  border: 10px solid #4D9FFF;
-  border-radius: 20px;
-  font-size: 60px;
-  font-weight: 600;
-  margin-top: 20vh;
+    position: relative;
+    height: 120px;
+    width: 80%;
+    background-color: black;
+    color: white;
+    border: 10px solid #4d9fff;
+    border-radius: 20px;
+    font-size: 60px;
+    font-weight: 600;
+    margin-top: 20vh;
 }
 
-.right {
-  height: 100%;
-  width: 33%;
+#right {
+    height: 100%;
+    width: 33%;
 }
 
-.right p {
-  margin-top: 5vh;
+#right p {
+    margin-top: 5vh;
 }
 
-.right img {
-  height: 45%;
-  margin-top: 10px;
-  margin-bottom: 10px;
+#right img {
+    height: 45%;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 #image-right {
-  margin-top: -300px;
-  margin-left: 50px;
+    margin-top: -300px;
+    margin-left: 50px;
 }
 
 #image-left {
-  margin-right: 70px;
-  margin-left: -10px;
+    margin-right: 70px;
+    margin-left: -10px;
 }
 
 @font-face {
-  font-family: K2DBold;
-  src: url("fonts/K2D/K2D-Bold.ttf");
+    font-family: K2DBold;
+    src: url("fonts/K2D/K2D-Bold.ttf");
 }
 
 @font-face {
-  font-family: K2DLight;
-  src: url("fonts/K2D/K2D-Light.ttf");
+    font-family: K2DLight;
+    src: url("fonts/K2D/K2D-Light.ttf");
 }
 
 #timer-label {
-  font-size: 25px;
-  font-family: K2DLight;
+    font-size: 25px;
+    font-family: K2DLight;
 }
 
 #timer {
-  font-size: 75px;
-  font-family: K2DBold;
-  margin-top: -30px;
+    font-size: 75px;
+    font-family: K2DBold;
+    margin-top: -30px !important;
 }
 
 #progress-circle {
-  border-radius: 50%;
-  width: 38vh;
-  height: 38vh;
-  margin: 0 auto;
-  margin-top: 15%;
+    border-radius: 50%;
+    width: 38vh;
+    height: 38vh;
+    margin: 0 auto;
+    margin-top: 15%;
 }
 
 #progress-text {
-  margin-top: -95%;
-  z-index: 1;
-  text-align: center;
-  margin-left: 20px;
+    margin-top: -95%;
+    z-index: 1;
+    text-align: center;
+    margin-left: 20px;
 }
 
 #progress-percentage {
-  font-size: 80px;
-  margin-bottom: 0;
+    font-size: 80px;
+    margin-bottom: 0;
 }
