--- a/src/index.css
+++ b/src/index.css
@@ -347,3 +347,11 @@ body {
     font-size: 80px;
     margin-bottom: 0;
 }
+
+#loading,
+#countdown {
+    color: rgb(37, 37, 37);
+    font-size: 60px;
+    font-weight: 600;
+    margin-top: 60%;
+}
