--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,8 @@ body {
 }
 
 .outer-container {
-    width: 100vw;
-    height: 100vh;
+    width: 99vw;
+    height: 95.5vh;
 }
 
 .content-container {
@@ -354,4 +354,83 @@ body {
     font-size: 60px;
     font-weight: 600;
     margin-top: 60%;
+}
+
+
+.display-selection {
+    width: 90vw;
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+}
+
+.display {
+    height: 45vh;
+    width: 50vw;
+    margin: 0 1.5vw;
+    text-align: center;
+    background: #ffffff;
+    border: 5px solid #f3f3f3;
+    border-radius: 50px;
+}
+
+
+.outer {
+    width: 98vw;
+    height: 100vh;
+    z-index: 0;
+}
+
+.inner {
+    position: fixed;
+    margin-top: -105vh;
+    height: 100vh;
+    width: 100vw;
+    z-index: 2;
+}
+
+
+.left {
+    width: 45%;
+    height: 100%;
+    text-align: center;
+    position: fixed;
+}
+
+.left img {
+    margin-top: 50%;
+    height: 70vh;
+}
+
+.right {
+    margin-top: 5%;
+    width: 65%;
+    height: 90%;
+    margin-left: 35%;
+    text-align: center;
+    position: fixed;
+}
+
+.right h1 {
+    font-weight: 700;
+    font-size: 70px;
+}
+
+.right h2 {
+    width: 60%;
+    margin-left: 20%;
+    margin-top: 5%;
+    font-weight: 500;
+    font-size: 40px;
+}
+
+#touchscreen-message {
+    margin-top: 30%;
+    margin-left: 35%;
+    width: 400px;
+}
+
+#touchscreen-message p {
+    font-size: 35px;
+    color: #929292;
 }
