--- a/src/index.css
+++ b/src/index.css
@@ -219,6 +219,7 @@ body {
     margin: 0 auto;
     height: 60%;
     width: 80%;
+    margin-left: 15%;
 }
 
 .timer_option {
@@ -280,11 +281,13 @@ body {
     font-size: 60px;
     font-weight: 600;
     margin-top: 20vh;
+    margin-left: calc(15% - 20px);
 }
 
 #right {
     height: 100%;
     width: 33%;
+    justify-content: center;
 }
 
 #right p {
@@ -317,7 +320,7 @@ body {
     src: url("fonts/K2D/K2D-Light.ttf");
 }
 
-#timer-label {
+#timer-label, #score-text {
     font-size: 25px;
     font-family: K2DLight;
 }
@@ -434,3 +437,13 @@ body {
     font-size: 35px;
     color: #929292;
 }
+
+#opponent-score {
+    background-color: white;
+    width: 80%;
+    height: 180px;
+    border-radius: 50px;
+    margin-left: 15%;
+    margin-top: -30px;
+    margin-bottom: 10px;
+}   
