--- a/src/templates/display_selection.html
+++ b/src/templates/display_selection.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Cycling Pedal Power Display</title>
-        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="../css/index.css" />
     </head>
     <body>
         <div class="outer-container">
@@ -16,19 +16,19 @@
                 <div class="display-selection">
                     <div class="display" onclick="select('left');">
                         <h1 style="margin-top: 10%;">LEFT</h1>
-                        <img src="images/monitor.png" width="75%" height="45%" style="margin-top: 5%; margin-bottom: 10%;">
+                        <img src="../images/monitor.png" width="75%" height="45%" style="margin-top: 5%; margin-bottom: 10%;">
                         <h1>MONITOR</h1>
                     </div>
 
                     <div class="display" onclick="select('large');">
                         <h1 style="margin-top: 10%;">LARGE</h1>
-                        <img src="images/tv.jpg" width="90%" height="55%" style="margin-bottom: 5%;"/>
+                        <img src="../images/tv.jpg" width="90%" height="55%" style="margin-bottom: 5%;"/>
                         <h1>DISPLAY</h1> 
                     </div>
 
                     <div class="display" onclick="select('right');">
                         <h1 style="margin-top: 10%;">RIGHT</h1>
-                        <img src="images/monitor.png" width="75%" height="45%" style="margin-top: 5%; margin-bottom: 10%;"/>
+                        <img src="../images/monitor.png" width="75%" height="45%" style="margin-top: 5%; margin-bottom: 10%;"/>
                         <h1>MONITOR</h1>
                     </div>
                 </div>
