--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Cycling Pedal Power Display</title>
-        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="../css/index.css" />
     </head>
     <body>
         <div class="outer-container">
@@ -16,30 +16,30 @@
                     <div class="top-row">
                         <div class="darkblue appliance-button" onclick="navigate('led');">
                             <p>LED Light Bulb</p>
-                            <img src="images/led.png" />
+                            <img src="../images/led.png" />
                         </div>
                         <div class="lightblue appliance-button" onclick="navigate('incandescent');">
                             <p>Incandescent Light Bulb</p>
-                            <img src="images/incandescent.png" />
+                            <img src="../images/incandescent.png" />
                         </div>
                         <div class="darkblue appliance-button" onclick="navigate('kettle');">
                             <p>Kettle</p>
-                            <img src="images/kettle.png" />
+                            <img src="../images/kettle.png" />
                         </div>
                     </div>
 
                     <div class="bottom-row">
                         <div class="lightblue appliance-button" onclick="navigate('toaster');">
                             <p>Toaster</p>
-                            <img src="images/toaster.png" />
+                            <img src="../images/toaster.png" />
                         </div>
                         <div class="darkblue appliance-button" onclick="navigate('laptop');">
                             <p>Laptop</p>
-                            <img src="images/laptop.png" />
+                            <img src="../images/laptop.png" />
                         </div>
                         <div class="lightblue appliance-button" onclick="navigate('washingmachine');">
                             <p>Washing Machine</p>
-                            <img src="images/washingmachine.png" />
+                            <img src="../images/washingmachine.png" />
                         </div>
                     </div>
                 </div>
