--- a/src/templates/mode_selection.html
+++ b/src/templates/mode_selection.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Cycling Pedal Power Display</title>
-        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="../css/index.css" />
     </head>
     <body>
         <div class="outer-container">
@@ -12,19 +12,19 @@
                     <h1>Cycle in solo or duo mode</h1>
                     <h2>Select mode to get started</h2>
                 </div>
-                <img id="back-arrow" src="images/back.png" onclick="go_back()" />
+                <img id="back-arrow" src="../images/back.png" onclick="go_back()" />
                 <button id="home-button" onclick="go_to_home()">Selection Screen</button>
                 <div class="mode-selection">
                     <div class="lightblue mode" id="solo-mode" onclick="select('solo mode');">
                         <h1>Solo mode</h1>
-                        <img id="solo-mode-img" src="images/girl-on-bicycle.png" />
+                        <img id="solo-mode-img" src="../images/girl-on-bicycle.png" />
                         <p>Take on the challenge solo</p>
                     </div>
                     <div class="darkblue mode" onclick="select('duo mode');">
                         <h1>Duo mode</h1>
                         <div class="duo-mode-imgs">
-                            <img id="duo-mode-img-left" src="images/boy-on-bicycle.png" />
-                            <img id="duo-mode-img-right" src="images/girl-on-bicycle-white.png" />
+                            <img id="duo-mode-img-left" src="../images/boy-on-bicycle.png" />
+                            <img id="duo-mode-img-right" src="../images/girl-on-bicycle-white.png" />
                         </div>
                         <p>Challenge an opponent in an energy-generating race or work cooperatively</p>
                     </div>
