--- a/src/templates/timer_duration_selection.html
+++ b/src/templates/timer_duration_selection.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Cycling Pedal Power Display</title>
-        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="../css/index.css" />
     </head>
     <body>
         <div class="outer-container">
@@ -13,7 +13,7 @@
                     <h2>Or cycle without a timer</h2>
                 </div>
 
-                <img id="back-arrow" src="images/back.png" onclick="go_back()" />
+                <img id="back-arrow" src="../images/back.png" onclick="go_back()" />
                 <button id="home-button" onclick="go_to_home()">Selection Screen</button>
 
                 <div class="timer_selection">
