--- a/src/templates/welcome_screen.html
+++ b/src/templates/welcome_screen.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="UTF-8" />
         <title>Cycling Pedal Power Display</title>
-        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="../css/index.css" />
     </head>
     <body onclick="next();" style=" background: linear-gradient(180deg, #50C0FF 0%, #99DBF8 31.77%, #DDFBFF 66.67%, #FFFFFF 100%); margin-bottom: 5%;">
           
         <div class="outer">
-            <img src="images/clouds.png" style="object-fit: fill; margin-top:-10px; margin-left: -10px; width: 105%; height: 105%;"/>
+            <img src="../images/clouds.png" style="object-fit: fill; margin-top:-10px; margin-left: -10px; width: 105%; height: 105%;"/>
             <div class="inner">
                 <div class="inner-left">
-                    <img src="images/bicycle.png" />
+                    <img src="../images/bicycle.png" />
                 </div>
                 <div class="inner-right">
                     <h1>Can you power on household appliances by cycling?</h1>
@@ -20,7 +20,7 @@
                         <div style="width: 275px; margin-bottom: -50px">
                             <p>Touch the screen to continue</p>
                         </div>
-                        <img style="display: inline; margin-left: 250px; margin-top: -100px;" src="images/touchscreen_icon.png" />
+                        <img style="display: inline; margin-left: 250px; margin-top: -100px;" src="../images/touchscreen_icon.png" />
                     </div>
                 </div>
                 
