--- a/src/templates/duo_mode.html
+++ b/src/templates/duo_mode.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Cycling Pedal Power Display</title>
-        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="../css/index.css" />
     </head>
     <body>
         <div class="outer-container">
@@ -13,19 +13,19 @@
                     <h2>Select mode to continue</h2>
                 </div>
 
-                <img id="back-arrow" src="images/back.png" onclick="go_back()" />
+                <img id="back-arrow" src="../images/back.png" onclick="go_back()" />
                 <button id="home-button" onclick="go_to_home()">Selection Screen</button>
 
                 <div class="mode-selection">
                     <div class="darkblue mode" onclick="select('compete');">
                         <h1>Compete</h1>
-                        <img src="images/compete.png" />
+                        <img src="../images/compete.png" />
                         <p>Compete in an energy-generating race</p>
                     </div>
 
                     <div class="darkblue mode" onclick="select('cooperate');">
                         <h1>Cooperate</h1>
-                        <img src="images/cooperate.png" />
+                        <img src="../images/cooperate.png" />
                         <p>Cycle cooperatively to power on an appliance of your choice</p>
                     </div>
                 </div>
