--- a/src/templates/display_selection.html
+++ b/src/templates/display_selection.html
@@ -37,11 +37,6 @@
                 <p style="font-size: 30px;">Select an option and drag the application screen onto the corresponding display</p>
             </div>
         </div>
-
-        <script>
-            function select(display) {
-                location.href = "welcome_screen.html?display=" + display;
-            }
-        </script>
+        <script src="../javascript/display_selection.js"></script>
     </body>
 </html>
