--- a/src/templates/duo_mode.html
+++ b/src/templates/duo_mode.html
@@ -31,29 +31,6 @@
                 </div>
             </div>
         </div>
-
-        <script>
-            const params = new Proxy(new URLSearchParams(window.location.search), {
-                get: (searchParams, prop) => searchParams.get(prop),
-            });
-            let appliance = params.appliance;
-            let display = params.display;
-
-            function go_back() {
-                location.href = "mode_selection.html?appliance=" + appliance;
-            }
-
-            function go_to_home() {
-                location.href = "index.html";
-            }
-
-            function select(mode) {
-                if (mode === "compete") {
-                    location.href = "timer_duration_selection.html?appliance=" + appliance + "&mode=Competition Mode&display=" + display;
-                } else if (mode === "cooperate") {
-                    location.href = "timer_duration_selection.html?appliance=" + appliance + "&mode=Cooperation Mode&display=" + display;
-                }
-            }
-        </script>
+        <script src="../javascript/duo_mode.js"></script>
     </body>
 </html>
