Initial two player synchronization logic
BUG: Variables needed for synchronization don't update when selection options are changed

--- a/src/templates/duo_mode.html
+++ b/src/templates/duo_mode.html
@@ -17,13 +17,13 @@
                 <button id="home-button" onclick="go_to_home()">Selection Screen</button>
 
                 <div class="mode-selection">
-                    <div class="darkblue mode" onclick="select('compete');">
+                    <div class="darkblue mode" onclick="select('Competition Mode');">
                         <h1>Compete</h1>
                         <img src="../images/compete.png" />
                         <p>Compete in an energy-generating race</p>
                     </div>
 
-                    <div class="darkblue mode" onclick="select('cooperate');">
+                    <div class="darkblue mode" onclick="select('Cooperation Mode');">
                         <h1>Cooperate</h1>
                         <img src="../images/cooperate.png" />
                         <p>Cycle cooperatively to power on an appliance of your choice</p>
