--- a/src/css/index.css
+++ b/src/css/index.css
@@ -217,9 +217,9 @@ body {
 
 .timer_selection {
     margin: 0 auto;
+    margin-top: 2.75%;
     height: 60%;
-    width: 80%;
-    margin-left: 15%;
+    width: 75%;
 }
 
 .timer_option {
@@ -281,7 +281,6 @@ body {
     font-size: 60px;
     font-weight: 600;
     margin-top: 20vh;
-    /* margin-left: calc(15% - 20px); */
 }
 
 #right {
