Bug and styling fixes

--- a/src/templates/large_display.html
+++ b/src/templates/large_display.html
@@ -3,9 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <title>Cycling Pedal Power Display</title>
-        <link rel="stylesheet" href="../css/index.css" />
     </head>
     <body>
-        <img src="../images/co2e-infographic.png"/>
+        <img src="../images/co2e-infographic.png" width="92.5%" style="margin: 0 auto; margin-left: 3.75%;"/>
     </body>
 </html>
