--- a/src/templates/welcome_screen.html
+++ b/src/templates/welcome_screen.html
@@ -5,10 +5,9 @@
         <title>Cycling Pedal Power Display</title>
         <link rel="stylesheet" href="../css/index.css" />
     </head>
-    <body onclick="next();" style=" background: linear-gradient(180deg, #50C0FF 0%, #99DBF8 31.77%, #DDFBFF 66.67%, #FFFFFF 100%); margin-bottom: 5%;">
-          
+    <body onclick="next();" style="background: linear-gradient(180deg, #50C0FF 0%, #99DBF8 31.77%, #DDFBFF 66.67%, #FFFFFF 100%);">
         <div class="outer">
-            <img src="../images/clouds.png" style="object-fit: fill; margin-top:-10px; margin-left: -10px; width: 105%; height: 105%;"/>
+            <img src="../images/clouds.png" style="object-fit: fill; margin-left: -5%; margin-top:-10px; width: 110%; height: 100%;"/>
             <div class="inner">
                 <div class="inner-left">
                     <img src="../images/bicycle.png" />
@@ -17,13 +16,10 @@
                     <h1>Can you power on household appliances by cycling?</h1>
                     <h2>Discover the environmental impact of six common household appliances and attempt to power on their digital twins through cycling.</h2>
                     <div id="touchscreen-message">
-                        <div style="width: 275px; margin-bottom: -50px">
-                            <p>Touch the screen to continue</p>
-                        </div>
-                        <img style="display: inline; margin-left: 250px; margin-top: -100px;" src="../images/touchscreen_icon.png" />
+                        <p style="width: 275px; margin-top:-50%; margin-left: 50px;">Touch the screen to continue</p>
+                        <img style="position: fixed; margin-left: 130px; margin-top: -14vh;" src="../images/touchscreen_icon.png" />
                     </div>
                 </div>
-                
             </div>
         </div>
         <script src="../javascript/welcome_screen.js"></script>
